--- a/app/javascript/app/components/sectors-agriculture/drivers-of-emissions/historical-emissions-graph/historical-emissions-graph-styles.scss
+++ b/app/javascript/app/components/sectors-agriculture/drivers-of-emissions/historical-emissions-graph/historical-emissions-graph-styles.scss
@@ -16,26 +16,29 @@
 }
 
 .filtersGroup {
-  display: flex;
-  flex-wrap: wrap;
-
-  & > * {
-    margin-bottom: 20px;
-    max-width: 220px;
-    margin-right: 30px;
+  @include columns((6, 6, 6));
+  > * {
+    @include xy-gutters(30px, $gutter-position: 'bottom');
   }
 }
 
 .chartWrapper {
   position: relative;
+  min-height: 550px;
+}
+
+.buttonGroupContainer {
+  margin-bottom: 40px;
 }
 
 @media #{$tablet-landscape} {
   .filtersGroup {
-    flex-wrap: nowrap;
-
+    @include columns((4, 4, 4));
     > * {
-      margin-bottom: 0;
+      @include xy-gutters(30px, $gutter-position: 'bottom');
     }
+  }
+  .buttonGroupContainer {
+    margin-bottom: 0.9375rem;
   }
 }
